--- a/package.json
+++ b/package.json
@@ -15,7 +15,15 @@
     "sass": "^1.62.1"
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "core-js": "^3.30.1",
     "regenerator-runtime": "^0.13.11"
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-private-methods"
+    ]
   }
 }
