--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "core-js": "^3.30.1",
+    "fractional": "^1.0.0",
     "regenerator-runtime": "^0.13.11"
   },
   "babel": {
